# echogpt

./: .gitignore  LICENSE  README.md  app.py  example.py  llm_interface.py  pyproject.toml  requirements.txt
responses/: response_20250524_052623.txt  response_20250524_053619.txt  response_20250524_053935.txt  response_20250524_054235.txt
tests/: conftest.py  test_app.py  test_llm_interface.py
